--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "back-end for todo-list-graphql using apollo studio",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "rest-server": "json-server --watch json-server/api.json -p 8080",
     "lint": "eslint --fix \"**/*.{js,jsx,ts,tsx,scss,md,json}\"",
     "start": "nodemon src/index"
   },
   "dependencies": {
-    "@apollo/datasource-rest": "^5.0.2",
+    "@apollo/datasource-rest": "^5.1.1",
     "@apollo/server": "^4.5.0",
+    "apollo-datasource-rest": "^3.7.0",
+    "apollo-server": "^3.12.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6"
   },
